# scipy_2022_django

./: .gitignore  .pdm.toml  db_test.sqlite3  dockerfile  pyproject.toml  readme.md  requirements.txt
covid/: asgi.py  settings.py  urls.py  wsgi.py
dataset/: fuente.md  llamados_107_covid.csv  llamados_107_covid.xlsx
doc/: draft Django.md  guia Django.md  guia.md  modelos.md
jupyter/: django_for_jupyter.py  pandas.ipynb
moviles/: admin.py  forms.py  models.py
moviles/migrations/: 0001_initial.py  0002_alter_movil_habilitado_alter_movil_observaciones.py  0003_alter_movil_patente.py
registros/: admin.py  apps.py  forms.py  models.py  urls.py  views.py  wizard.py
registros/migrations/: 0001_initial.py  0002_alter_registro_fecha.py  0003_alter_registro_fecha.py  0004_alter_registro_fecha.py  0005_alter_registro_fecha.py  0006_alter_registro_fecha.py
registros/templates/registros/: pandas.html  registro_confirm_delete.html  registro_detail.html  registro_form.html  registro_list.html  registro_pandas.html
servicios/: admin.py  forms.py  models.py  views.py  views_CBV.py  views_FBV.py
servicios/migrations/: 0001_initial.py  0002_servicio_created_at_servicio_updated_at_and_more.py
servicios/templates/servicios/: cbv_list.html  formulario.html  list_fbv.html  list_moviles_fbv.html  servicio_confirm_delete_bck.html  servicio_detail.html  servicio_form.html  servicio_list.html
static/css/: styles.css
templates/: base.html  header.html  index_basico.html
